Fix: Resolve post-refactoring boot issues (Black screen, JS load errors, CSP)

--- a/Frontend/public/account_azienda.html
+++ b/Frontend/public/account_azienda.html
@@ -14,8 +14,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <!-- Fonts -->
     <link rel="stylesheet" href="assets/css/fonts.css?v=3.4"> <!-- Design System Master (PROTOCOLLO BASE V3.4) -->
     <link rel="stylesheet" href="assets/css/operatore.css?v=3.4"> <!-- CORE JS -->
-    <script src="assets/js/core.js?v=3.4"></script>
-    <script type="module" src="assets/js/ui-core.js?v=3.4"></script>
+    <script src="assets/js/core.js"></script>
+    <script type="module" src="assets/js/ui-core.js"></script>
 </head>
 
 <body class="base-bg"> <!-- 1. CONTENITORE PRINCIPALE (Standard Regola #2) -->
@@ -40,8 +40,10 @@
         <div class="spacer-footer"></div> <!-- FOOTER PREMIUM -->
         <footer id="footer-placeholder" class="base-footer"></footer>
     </div> <!-- SCRIPTS MODULARI -->
-    <script type="module" src="assets/js/main.js?v=4.4"></script>
-    <script type="module" src="assets/js/modules/azienda/account_azienda.js?v=4.1"></script>
+    <script type="module" src="assets/js/main.js"></script>
+    <script type="module" src="assets/js/modules/azienda/account_azienda.js"></script>
 </body>
 
 </html>
+
+
