--- a/Frontend/public/aggiungi_nuova_azienda.html
+++ b/Frontend/public/aggiungi_nuova_azienda.html
@@ -22,8 +22,8 @@
     <link rel="stylesheet" href="assets/css/operatore.css?v=3.6">
 
     <!-- CORE JS -->
-    <script src="assets/js/core.js?v=3.6"></script>
-    <script type="module" src="assets/js/ui-core.js?v=3.6"></script>
+    <script src="assets/js/core.js"></script>
+    <script type="module" src="assets/js/ui-core.js"></script>
 </head>
 
 <body class="base-bg">
@@ -131,7 +131,7 @@
 
                             <div class="form-grid-2">
                                 <div class="glass-field-container">
-                                    <label class="view-label" data-t="city">Città</label>
+                                    <label class="view-label" data-t="city">CittÃ </label>
                                     <div class="glass-field">
                                         <input id="citta" type="text" placeholder="Milano" />
                                     </div>
@@ -365,8 +365,10 @@
     </div>
 
     <!-- Scripts -->
-    <script type="module" src="assets/js/main.js?v=4.4"></script>
-    <script type="module" src="assets/js/modules/azienda/aggiungi_azienda.js?v=4.1"></script>
+    <script type="module" src="assets/js/main.js"></script>
+    <script type="module" src="assets/js/modules/azienda/aggiungi_azienda.js"></script>
 </body>
 
 </html>
+
+
