--- a/Frontend/public/area_privata.html
+++ b/Frontend/public/area_privata.html
@@ -14,8 +14,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <!-- Fonts -->
     <link rel="stylesheet" href="assets/css/fonts.css"> <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
     <link rel="stylesheet" href="assets/css/operatore.css?v=3.3"> <!-- CORE JS -->
-    <script src="assets/js/core.js?v=3.3"></script>
-    <script type="module" src="assets/js/ui-core.js?v=3.3"></script>
+    <script src="assets/js/core.js"></script>
+    <script type="module" src="assets/js/ui-core.js"></script>
 </head>
 
 <body class="base-bg"> <!-- 1. CONTENITORE PRINCIPALE -->
@@ -75,7 +75,7 @@
                     <div class="flex items-center gap-2 mb-2 px-1"> <span
                             class="material-symbols-outlined text-sm text-orange-400">star</span>
                         <h3 class="text-xs font-bold text-white/60 uppercase tracking-widest" data-t="top_used_access">
-                            TOP 10 PIÙ USATI</h3>
+                            TOP 10 PIÃ™ USATI</h3>
                     </div>
                     <div id="top-accounts-list" class="flex flex-col gap-2"> <!-- Loading -->
                         <div class="py-10 flex justify-center opacity-20"> <span
@@ -130,8 +130,10 @@
         <div class="spacer-footer"></div>
         <footer id="footer-placeholder" class="base-footer"></footer>
     </div> <!-- SCRIPTS MODULARI -->
-    <script type="module" src="assets/js/main.js?v=4.4"></script>
-    <script type="module" src="assets/js/modules/privato/area_privata.js?v=4.1"></script>
+    <script type="module" src="assets/js/main.js"></script>
+    <script type="module" src="assets/js/modules/privato/area_privata.js"></script>
 </body>
 
 </html>
+
+
