--- a/Frontend/public/gestione_allegati.html
+++ b/Frontend/public/gestione_allegati.html
@@ -15,8 +15,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <!-- Fonts -->
     <link rel="stylesheet" href="assets/css/fonts.css"> <!-- Design System Master (PROTOCOLLO BASE V3.6) -->
     <link rel="stylesheet" href="assets/css/operatore.css?v=3.6"> <!-- CORE JS -->
-    <script src="assets/js/core.js?v=3.6"></script>
-    <script type="module" src="assets/js/ui-core.js?v=3.6"></script>
+    <script src="assets/js/core.js"></script>
+    <script type="module" src="assets/js/ui-core.js"></script>
 </head>
 
 <body class="base-bg">
@@ -110,8 +110,10 @@
         <footer id="footer-placeholder" class="base-footer"></footer> <!-- Hidden File Input --> <input type="file"
             id="file-upload" class="hidden" accept=".pdf,.jpg,.jpeg,.png,.doc,.docx,image/*">
     </div> <!-- Scripts -->
-    <script type="module" src="assets/js/main.js?v=4.4"></script>
-    <script type="module" src="assets/js/gestione_allegati.js?v=4.2"></script>
+    <script type="module" src="assets/js/main.js"></script>
+    <script type="module" src="assets/js/gestione_allegati.js"></script>
 </body>
 
 </html>
+
+
