--- a/Frontend/public/impostazioni.html
+++ b/Frontend/public/impostazioni.html
@@ -15,9 +15,9 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <!-- Fonts -->
     <link rel="stylesheet" href="assets/css/fonts.css"> <!-- Design System Master (PROTOCOLLO BASE V3.6) -->
     <link rel="stylesheet" href="assets/css/operatore.css?v=3.6"> <!-- CORE JS -->
-    <script src="assets/js/core.js?v=3.6"></script>
-    <script type="module" src="assets/js/ui-core.js?v=3.6"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+    <script src="assets/js/core.js"></script>
+    <script type="module" src="assets/js/ui-core.js"></script>
+    <script src="public/https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 </head>
 
 <body class="base-bg">
@@ -63,11 +63,11 @@
                         class="hidden flex-col gap-1 px-4 py-2 mt-[-12px] glass-card rounded-t-none border-t-0 animate-in slide-in-from-top-2">
                         <button
                             class="lang-option flex items-center gap-3 p-3 rounded-lg hover:bg-white/5 transition-all text-xs font-medium text-white/70"
-                            data-code="it"> <span class="text-base">🇮🇹</span> Italiano </button> <button
+                            data-code="it"> <span class="text-base">ðŸ‡®ðŸ‡¹</span> Italiano </button> <button
                             class="lang-option flex items-center gap-3 p-3 rounded-lg hover:bg-white/5 transition-all text-xs font-medium text-white/70"
-                            data-code="en"> <span class="text-base">🇺🇸</span> English </button> <button
+                            data-code="en"> <span class="text-base">ðŸ‡ºðŸ‡¸</span> English </button> <button
                             class="lang-option flex items-center gap-3 p-3 rounded-lg hover:bg-white/5 transition-all text-xs font-medium text-white/70"
-                            data-code="ro"> <span class="text-base">🇷🇴</span> Română </button> </div> <!-- Tema -->
+                            data-code="ro"> <span class="text-base">ðŸ‡·ðŸ‡´</span> RomÃ¢nÄƒ </button> </div> <!-- Tema -->
                     <div class="glass-card p-4">
                         <div class="flex items-center gap-4 mb-4">
                             <div
@@ -145,7 +145,7 @@
                                 class="size-10 rounded-xl bg-purple-500/10 text-purple-400 flex-center border border-purple-500/10">
                                 <span class="material-symbols-outlined">timer</span> </div>
                             <div class="flex flex-col"> <span class="text-sm font-bold text-white"
-                                    data-t="lock_inactivity">Blocco Inattività</span> <span
+                                    data-t="lock_inactivity">Blocco InattivitÃ </span> <span
                                     class="text-[10px] text-white/40 font-bold uppercase tracking-widest"
                                     data-t="lock_inactivity_desc">Autolock schermo</span> </div>
                         </div>
@@ -202,8 +202,11 @@
         <div class="spacer-footer"></div>
         <footer id="footer-placeholder" class="base-footer"></footer>
     </div> <!-- Scripts -->
-    <script type="module" src="assets/js/main.js?v=4.4"></script>
-    <script type="module" src="assets/js/modules/settings/impostazioni.js?v=4.4"></script>
+    <script type="module" src="assets/js/main.js"></script>
+    <script type="module" src="assets/js/modules/settings/impostazioni.js"></script>
 </body>
 
 </html>
+
+
+
