--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -16,6 +16,7 @@
     <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
     <link rel="stylesheet" href="assets/css/operatore.css?v=3.3">
 
+</head>
 
 <body class="base-bg">
     <!-- 1. WRAPPER PRINCIPALE -->
@@ -101,7 +102,7 @@
     </div>
 
     <!-- Scripts (In fondo per performance) -->
-    <script type="module" src="assets/js/main.js?v=4.4"></script>
-    <script type="module" src="assets/js/modules/auth/login.js?v=4.4"></script>
+    <script type="module" src="assets/js/main.js"></script>
+    <script type="module" src="assets/js/modules/auth/login.js"></script>
 
 </body>
