--- a/Frontend/public/modifica_azienda.html
+++ b/Frontend/public/modifica_azienda.html
@@ -22,8 +22,8 @@
     <link rel="stylesheet" href="assets/css/operatore.css?v=3.6">
 
     <!-- CORE JS -->
-    <script src="assets/js/core.js?v=3.6"></script>
-    <script type="module" src="assets/js/ui-core.js?v=3.6"></script>
+    <script src="assets/js/core.js"></script>
+    <script type="module" src="assets/js/ui-core.js"></script>
 </head>
 
 <body class="base-bg">
@@ -199,7 +199,7 @@
                             </div>
                             <div class="grid grid-cols-3 gap-3">
                                 <div class="base-input-group h-11">
-                                    <input id="citta" type="text" placeholder="Città" class="text-xs" />
+                                    <input id="citta" type="text" placeholder="CittÃ " class="text-xs" />
                                 </div>
                                 <div class="base-input-group h-11">
                                     <input id="provincia" type="text" placeholder="Prov"
@@ -258,7 +258,7 @@
                                     </div>
                                     <div class="grid grid-cols-3 gap-3">
                                         <input id="admin-citta" type="text" class="base-input-group !pl-4 h-10 text-xs"
-                                            placeholder="Città" />
+                                            placeholder="CittÃ " />
                                         <input id="admin-provincia" type="text"
                                             class="base-input-group !pl-2 h-10 text-xs text-center uppercase"
                                             placeholder="PR" maxlength="2" />
@@ -297,7 +297,7 @@
                                     </div>
                                     <div class="grid grid-cols-3 gap-3">
                                         <input id="oper-citta" type="text" class="base-input-group !pl-4 h-10 text-xs"
-                                            placeholder="Città" />
+                                            placeholder="CittÃ " />
                                         <input id="oper-provincia" type="text"
                                             class="base-input-group !pl-2 h-10 text-xs text-center uppercase"
                                             placeholder="PR" maxlength="2" />
@@ -421,8 +421,10 @@
     </div>
 
     <!-- Scripts -->
-    <script type="module" src="assets/js/main.js?v=4.4"></script>
-    <script type="module" src="assets/js/modules/azienda/modifica_azienda.js?v=4.1"></script>
+    <script type="module" src="assets/js/main.js"></script>
+    <script type="module" src="assets/js/modules/azienda/modifica_azienda.js"></script>
 </body>
 
 </html>
+
+
