--- a/Frontend/public/privacy.html
+++ b/Frontend/public/privacy.html
@@ -22,8 +22,8 @@
     <link rel="stylesheet" href="assets/css/operatore.css?v=3.6">
 
     <!-- CORE JS -->
-    <script src="assets/js/core.js?v=3.6"></script>
-    <script type="module" src="assets/js/ui-core.js?v=3.6"></script>
+    <script src="assets/js/core.js"></script>
+    <script type="module" src="assets/js/ui-core.js"></script>
 </head>
 
 <body class="base-bg">
@@ -60,9 +60,9 @@
                                 data-t="privacy_1_title">1. Titolare del Trattamento</h3>
                         </div>
                         <p class="text-xs font-medium text-white/40 leading-relaxed" data-t="privacy_1_text">
-                            Il Titolare del trattamento dei dati è <strong class="text-white/80">Boschetto
+                            Il Titolare del trattamento dei dati Ã¨ <strong class="text-white/80">Boschetto
                                 Diego</strong>.
-                            L'applicazione è concepita per garantire la massima sicurezza e riservatezza.
+                            L'applicazione Ã¨ concepita per garantire la massima sicurezza e riservatezza.
                         </p>
                     </div>
 
@@ -147,8 +147,10 @@
     </div>
 
     <!-- Scripts -->
-    <script type="module" src="assets/js/main.js?v=4.4"></script>
-    <script type="module" src="assets/js/modules/settings/privacy.js?v=4.4"></script>
+    <script type="module" src="assets/js/main.js"></script>
+    <script type="module" src="assets/js/modules/settings/privacy.js"></script>
 </body>
 
 </html>
+
+
