--- a/Frontend/public/registrati.html
+++ b/Frontend/public/registrati.html
@@ -20,8 +20,8 @@
     <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
     <link rel="stylesheet" href="assets/css/operatore.css?v=3.3">
     <!-- CORE JS -->
-    <script src="assets/js/core.js?v=3.3"></script>
-    <script type="module" src="assets/js/ui-core.js?v=3.3"></script>
+    <script src="assets/js/core.js"></script>
+    <script type="module" src="assets/js/ui-core.js"></script>
 </head>
 
 <body class="base-bg">
@@ -113,7 +113,7 @@
 
                 <!-- Login Link -->
                 <div class="auth-footer-link-box">
-                    <span data-t="have_account_text">Hai già un account?</span>
+                    <span data-t="have_account_text">Hai giÃ  un account?</span>
                     <a href="index.html" class="link-register" data-t="login_now_link">
                         Accedi ora
                     </a>
@@ -129,9 +129,11 @@
     </div>
 
     <!-- Scripts -->
-    <script type="module" src="assets/js/main.js?v=4.4"></script>
-    <script type="module" src="assets/js/modules/auth/registrati.js?v=4.4"></script>
+    <script type="module" src="assets/js/main.js"></script>
+    <script type="module" src="assets/js/modules/auth/registrati.js"></script>
 
 </body>
 
 </html>
+
+
