--- a/Frontend/public/archivio_account.html
+++ b/Frontend/public/archivio_account.html
@@ -14,9 +14,9 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <!-- Fonts -->
     <link rel="stylesheet" href="assets/css/fonts.css"> <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
     <link rel="stylesheet" href="assets/css/operatore.css?v=3.3"> <!-- CORE JS -->
-    <script src="assets/js/core.js?v=3.3"></script>
-    <script type="module" src="assets/js/ui-core.js?v=3.3"></script>
-    <script src="assets/js/translations.js?v=3.3"></script>
+    <script src="assets/js/core.js"></script>
+    <script type="module" src="assets/js/ui-core.js"></script>
+    <script src="assets/js/translations.js"></script>
 </head>
 
 <body class="base-bg">
@@ -74,9 +74,11 @@
             <div class="spacer-footer"></div> <!-- FOOTER PREMIUM -->
             <footer id="footer-placeholder" class="base-footer"></footer>
     </div> <!-- Scripts -->
-    <script type="module" src="assets/js/main.js?v=4.4"></script>
-    <script type="module" src="assets/js/modules/settings/archivio_account.js?v=4.4"></script>
+    <script type="module" src="assets/js/main.js"></script>
+    <script type="module" src="assets/js/modules/settings/archivio_account.js"></script>
 </body>
 
 </html>
+
+
 
