--- a/Frontend/public/dati_azienda.html
+++ b/Frontend/public/dati_azienda.html
@@ -15,9 +15,9 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <!-- Fonts -->
     <link rel="stylesheet" href="assets/css/fonts.css"> <!-- Design System Master (PROTOCOLLO BASE V3.6) -->
     <link rel="stylesheet" href="assets/css/operatore.css?v=3.6"> <!-- CORE JS -->
-    <script src="assets/js/core.js?v=3.6"></script>
-    <script type="module" src="assets/js/ui-core.js?v=3.6"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+    <script src="assets/js/core.js"></script>
+    <script type="module" src="assets/js/ui-core.js"></script>
+    <script src="public/https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 </head>
 
 <body class="base-bg">
@@ -232,8 +232,11 @@
         <div class="spacer-footer"></div>
         <footer id="footer-placeholder" class="base-footer"></footer>
     </div> <!-- Scripts -->
-    <script type="module" src="assets/js/main.js?v=4.4"></script>
-    <script type="module" src="assets/js/modules/azienda/dati_azienda.js?v=4.1"></script>
+    <script type="module" src="assets/js/main.js"></script>
+    <script type="module" src="assets/js/modules/azienda/dati_azienda.js"></script>
 </body>
 
 </html>
+
+
+
