--- a/Frontend/public/dettaglio_account_privato.html
+++ b/Frontend/public/dettaglio_account_privato.html
@@ -21,8 +21,8 @@
     <link rel="stylesheet" href="assets/css/operatore.css?v=3.6">
 
     <!-- CORE JS -->
-    <script src="assets/js/core.js?v=3.6"></script>
-    <script type="module" src="assets/js/ui-core.js?v=3.6"></script>
+    <script src="assets/js/core.js"></script>
+    <script type="module" src="assets/js/ui-core.js"></script>
 </head>
 
 <body class="base-bg">
@@ -206,8 +206,10 @@
     </div>
 
     <!-- Scripts -->
-    <script type="module" src="assets/js/main.js?v=4.4"></script>
-    <script type="module" src="assets/js/modules/privato/dettaglio_account_privato.js?v=4.1"></script>
+    <script type="module" src="assets/js/main.js"></script>
+    <script type="module" src="assets/js/modules/privato/dettaglio_account_privato.js"></script>
 </body>
 
 </html>
+
+
