--- a/Frontend/public/form_account_azienda.html
+++ b/Frontend/public/form_account_azienda.html
@@ -22,8 +22,8 @@
     <link rel="stylesheet" href="assets/css/operatore.css?v=5.3">
 
     <!-- CORE JS -->
-    <script src="assets/js/core.js?v=5.3"></script>
-    <script type="module" src="assets/js/ui-core.js?v=5.3"></script>
+    <script src="assets/js/core.js"></script>
+    <script type="module" src="assets/js/ui-core.js"></script>
 </head>
 
 <body class="base-bg">
@@ -224,8 +224,10 @@
     </div>
 
     <!-- Scripts -->
-    <script type="module" src="assets/js/main.js?v=4.4"></script>
-    <script type="module" src="assets/js/modules/azienda/form_account_azienda.js?v=5.4"></script>
+    <script type="module" src="assets/js/main.js"></script>
+    <script type="module" src="assets/js/modules/azienda/form_account_azienda.js"></script>
 </body>
 
 </html>
+
+
