--- a/Frontend/public/home_page.html
+++ b/Frontend/public/home_page.html
@@ -17,8 +17,8 @@
   <link rel="stylesheet" href="assets/css/operatore.css?v=3.3">
 
   <!-- CORE JS -->
-  <script src="assets/js/core.js?v=3.3"></script>
-  <script type="module" src="assets/js/ui-core.js?v=3.3"></script>
+  <script src="assets/js/core.js"></script>
+  <script type="module" src="assets/js/ui-core.js"></script>
 </head>
 
 <body class="home-page">
@@ -125,8 +125,10 @@
   </div>
 
   <!-- Scripts -->
-  <script type="module" src="assets/js/main.js?v=4.4"></script>
-  <script type="module" src="assets/js/modules/home/home.js?v=4.4"></script>
+  <script type="module" src="assets/js/main.js"></script>
+  <script type="module" src="assets/js/modules/home/home.js"></script>
 </body>
 
 </html>
+
+
