Refactor: Migliorata logica navigazione, gestione automatica flag banking e ripristino note informative in dettaglio account

--- a/Frontend/public/dati_azienda.html
+++ b/Frontend/public/dati_azienda.html
@@ -17,7 +17,6 @@
     <link rel="stylesheet" href="assets/css/operatore.css?v=3.6"> <!-- CORE JS -->
     <script src="assets/js/core.js"></script>
     <script type="module" src="assets/js/ui-core.js"></script>
-    <script src="public/https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 </head>
 
 <body class="base-bg">
@@ -33,7 +32,8 @@
                             class="size-24 rounded-full flex-center bg-white/5 border border-white/10 overflow-hidden relative shadow-2xl">
                             <img id="azienda-logo" class="w-full h-full object-cover hidden" src="" /> <span
                                 id="azienda-logo-placeholder"
-                                class="material-symbols-outlined text-4xl opacity-20">domain</span> </div>
+                                class="material-symbols-outlined text-4xl opacity-20">domain</span>
+                        </div>
                         <!-- Status Badge -->
                         <div class="hero-status-dot bg-emerald-500"></div>
                     </div>
@@ -64,7 +64,8 @@
                                 class="size-14 rounded-full flex-center bg-black/30 border border-white/10 overflow-hidden shrink-0">
                                 <img id="referente-photo" class="w-full h-full object-cover hidden" src="" /> <span
                                     id="referente-photo-placeholder"
-                                    class="material-symbols-outlined text-2xl opacity-20">person</span> </div>
+                                    class="material-symbols-outlined text-2xl opacity-20">person</span>
+                            </div>
                             <div class="flex-1 min-w-0">
                                 <p id="referente-nome" class="text-base font-bold text-white truncate">-</p>
                                 <p id="referente-ruolo"
@@ -92,7 +93,8 @@
                         </div>
                     </div> <!-- Tabs Sedi -->
                     <div id="locations-tabs-container" class="flex gap-2 overflow-x-auto pb-2 scrollbar-hide px-1">
-                        <!-- Generato via JS --> </div>
+                        <!-- Generato via JS -->
+                    </div>
                     <div id="location-content-card" class="glass-card p-4 flex gap-4">
                         <div class="flex-1 min-w-0 flex-col-gap-2">
                             <div>
@@ -171,7 +173,8 @@
                             <div class="flex items-center gap-3">
                                 <div
                                     class="size-8 rounded-lg bg-white/5 text-white/40 flex-center border border-white/10">
-                                    <span class="material-symbols-outlined text-lg">fax</span> </div>
+                                    <span class="material-symbols-outlined text-lg">fax</span>
+                                </div>
                                 <div class="flex flex-col"> <span
                                         class="text-[9px] font-black uppercase text-white/40 tracking-widest"
                                         data-t="fax">Fax</span> <span id="fax-azienda"
@@ -237,6 +240,3 @@
 </body>
 
 </html>
-
-
-
