Fix: Corretta etichetta logo e ripristinata notifica invito inviato

--- a/Frontend/public/form_account_privato.html
+++ b/Frontend/public/form_account_privato.html
@@ -53,7 +53,7 @@
                                 <div id="logo-placeholder" class="logo-placeholder-content">
                                     <span
                                         class="material-symbols-outlined logo-placeholder-icon">add_photo_alternate</span>
-                                    <span class="logo-placeholder-text" data-t="visual_identity">Logo Account</span>
+                                    <span class="logo-placeholder-text" data-t="add_logo">Aggiungi Logo</span>
                                 </div>
                             </div>
                         </div>
